<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/first_item"
        android:title="@string/title_manage">

        <menu>
            <item
                android:id="@+id/nav_recently"
                android:icon="@drawable/ic_rounded_history_24"
                android:title="@string/menu_recently"/>
            <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_rounded_favorite_24"
                android:title="@string/menu_favorite"/>
        </menu>

    </item>


    <item
        android:id="@+id/second_item"
        android:title="@string/title_manage">
        <menu>
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_rounded_category_24"
                android:title="@string/menu_category" />
            <item
                android:id="@+id/nav_filter"
                android:icon="@drawable/ic_rounded_filter_list_24"
                android:title="@string/menu_filter" />
        </menu>
    </item>

</menu>